--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -572,7 +572,6 @@ textarea {
     float: right;
   }
   .subscribe {
-    height: 37px;
     margin-bottom: 22px;
     input[type="email"] {
       width: 243px;
